--- a/views/partials/admin_header.hbs
+++ b/views/partials/admin_header.hbs
@@ -23,6 +23,12 @@
                 Orders
               </a>
             </li>
+            <li class="shrink-0">
+              <a href="/admin/admin_customers" title="" style="text-decoration: none;"
+                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
+                Customers
+              </a>
+            </li>
              <li class="shrink-0">
               <a href="/admin/add_product" title="" style="text-decoration: none;"
                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
