--- a/views/admin/admin_home.hbs
+++ b/views/admin/admin_home.hbs
@@ -25,6 +25,7 @@
         <tbody>
             {{#each products}}
             <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                <a href="/admin/admin_product_details?product_id={{this._id}}">
                 <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                     {{this.Name}}
                 </th>
@@ -41,7 +42,12 @@
                     <img src="/product_images/{{this._id}}.jpg" style="width: 50px; height:50px;" alt="">
                 </td>
                 <td class="px-6 py-4">
-                    <a href="/admin/edit_product?id={{this._id}}" class="font-medium text-blue-600 hover:text-blue-500" style="text-decoration: none;">
+                    <a href="/admin/admin_product_details?product_id={{this._id}}"
+                    class="font-medium text-blue-600 hover:text-blue-500" style="text-decoration: none;">
+                    View
+                    </a>
+                    <br>
+                    <a href="/admin/edit_product?id={{this._id}}" class="font-medium text-indigo-600 hover:text-indigo-500" style="text-decoration: none;">
                         Edit</a>
                         <br>
                     <a href="/admin/delete_product?id={{this._id}}" class="font-medium text-red-600 hover:text-red-500" style="text-decoration:none;"
