--- a/views/users/order_details.hbs
+++ b/views/users/order_details.hbs
@@ -1,4 +1,3 @@
-
 <section class="bg-white py-8 antialiased dark:bg-gray-900 md:py-16">
   <form action="#" class="mx-auto max-w-screen-xl px-4 2xl:px-0">
     <div class="mx-auto max-w-3xl">
@@ -9,8 +8,10 @@
 
         <dl>
           <dt class="text-base font-medium text-gray-900 dark:text-white">{{user.Name}}</dt>
-          <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">{{order_details.delivery_details.address}},{{order_details.delivery_details.pin_code}}</dd>
-          <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">{{order_details.delivery_details.mobile_number}}</dd>
+          <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">
+            {{order_details.delivery_details.address}},{{order_details.delivery_details.pin_code}}</dd>
+          <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">
+            {{order_details.delivery_details.mobile_number}}</dd>
           <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">{{user.Email}}</dd>
 
         </dl>
@@ -25,15 +26,20 @@
               <tr>
                 <td class="whitespace-nowrap py-4 md:w-[384px]">
                   <div class="flex items-center gap-4">
-                    <a href="/product_details?product_id={{this.product._id}}" class="flex items-center aspect-square w-10 h-10 shrink-0">
-                      <img class="h-auto w-full max-h-full dark:hidden" src="product_images/{{this.product._id}}.jpg" alt="imac image" />
+                    <a href="/product_details?product_id={{this.product._id}}"
+                      class="flex items-center aspect-square w-10 h-10 shrink-0">
+                      <img class="h-auto w-full max-h-full dark:hidden" src="product_images/{{this.product._id}}.jpg"
+                        alt="imac image" />
                     </a>
-                    <a href="/product_details?product_id={{this._id}}" style="text-decoration: none;">{{this.product.Name}}</a>
+                    <a href="/product_details?product_id={{this._id}}"
+                      style="text-decoration: none;">{{this.product.Name}}</a>
                   </div>
                 </td>
                 <td class="p-4 text-base font-normal text-gray-900 dark:text-white">x {{this.quantity}}</td>
                 <td class="p-4 text-right text-base font-bold text-gray-900 dark:text-white">
-                <span style="font-weight: bold;"> ₹ {{#cal_price   this.product.Price this.quantity}}{{/cal_price}}</span></td>
+                  <span style="font-weight: bold;"> ₹ {{#cal_price this.product.Price
+                    this.quantity}}{{/cal_price}}</span>
+                </td>
               </tr>
               {{/each}}
             </tbody>
@@ -45,13 +51,15 @@
             <dl class="flex items-center justify-between gap-4 border-t border-gray-200 pt-2 dark:border-gray-700">
               <dt class="text-lg font-bold text-gray-900 dark:text-white">Total</dt>
               <dd class="text-lg font-bold text-gray-900 dark:text-white">₹{{order_details.total_amount}}</dd>
+              <dt class="text-lg font-bold text-gray-900 dark:text-white"> Current Status:
+              </dt> {{#order_status order_details.status }}{{/order_status}}
+
             </dl>
           </div>
           <div class="gap-4 sm:flex sm:items-center">
-            <a href="/orders" 
-           style="text-decoration: none;"
-            class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">
-            Return to Orders</a>
+            <a href="/orders" style="text-decoration: none;"
+              class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">
+              Return to Orders</a>
           </div>
         </div>
       </div>
