--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>E-KART</title>
-    <link rel="icon" type="image/x-icon" href="images/website_icon.jpeg">
+    <link rel="icon" type="image/x-icon" href="/images/website_icon.jpeg">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
