--- a/views/partials/admin_header.hbs
+++ b/views/partials/admin_header.hbs
@@ -6,7 +6,7 @@
         <div class="flex items-center space-x-8">
           <div class="shrink-0">
             <a href="/admin" style="text-decoration: none;" title="" class="">
-              <h2>Handy Kart</h2>
+              <h2>Handy Kart Admin</h2>
             </a>
           </div>
 
