--- a/views/users/orders.hbs
+++ b/views/users/orders.hbs
@@ -2,7 +2,7 @@
   <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">
     <div class="mx-auto max-w-5xl">
       <div class="gap-4 sm:flex sm:items-center sm:justify-between">
-        <h2 class="text-xl font-semibold text-gray-900 dark:text-white sm:text-2xl">My orders</h2>
+              <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">My orders</h2>
       </div>
       {{#each orders}}
       <div class="mt-6 flow-root sm:mt-8">
