--- a/views/users/view_user_account.hbs
+++ b/views/users/view_user_account.hbs
@@ -1,6 +1,6 @@
 <section class="bg-white py-8 antialiased dark:bg-gray-900 md:py-8">
   <div class="mx-auto max-w-screen-lg px-4 2xl:px-0">
-    <h2 class="mb-4 text-xl font-semibold text-gray-900 dark:text-white sm:text-2xl md:mb-6">General overview</h2>
+    <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">Account Details</h2>
     <div class="py-4 md:py-8">
       <div class="mb-4 grid gap-4 sm:grid-cols-2 sm:gap-8 lg:gap-16">
         <div class="space-y-4">
