--- a/views/admin/admin_home.hbs
+++ b/views/admin/admin_home.hbs
@@ -50,8 +50,8 @@
                     <a href="/admin/edit_product?id={{this._id}}" class="font-medium text-indigo-600 hover:text-indigo-500" style="text-decoration: none;">
                         Edit</a>
                         <br>
-                    <a href="/admin/delete_product?id={{this._id}}" class="font-medium text-red-600 hover:text-red-500" style="text-decoration:none;"
-                    onclick="return confirm('Do you want to delete {{this.Name}}')">
+                    <a href="/admin/delete_product?id={{product._id}}" class="font-medium text-red-600 hover:text-red-500" style="text-decoration:none;"
+                    onclick="return confirm('Do you want to delete {{product.Name}}')">
                         Delete</a>
 
                 </td>
