--- a/views/admin/admin_product_details.hbs
+++ b/views/admin/admin_product_details.hbs
@@ -96,8 +96,28 @@
               >
                 345 Reviews
               </a>
+              <br>
             </div>
           </div>
+          <br>
+              <a
+            href="/admin/edit_product?id={{product._id}}"
+            title=""
+            style="text-decoration: none;"
+            class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+            role="button"
+          >
+            Edit
+          </a>
+          <a
+            href="/admin/delete_product?id={{product._id}}"
+            onclick="return confirm('Do you want to delete {{this.Name}}')"
+            style="text-decoration: none;"
+            class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 "
+            role="button"
+          >
+            Delete
+          </a>
 
         
 
