--- a/views/partials/user_header.hbs
+++ b/views/partials/user_header.hbs
@@ -53,12 +53,12 @@
         </div>
         <div class="flex items-center lg:space-x-2">
 
-          <form class="flex items-center max-w-sm mx-auto">
+          <form class="flex items-center max-w-sm mx-auto" action="/search" method="post">
             <label for="simple-search" class="sr-only">Search</label>
             <div class="relative w-full">
-              <input type="text" id="simple-search"
+              <input type="text" id="search" name="search" value="{{prompt}}"
                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                placeholder="Search branch name..." required />
+                placeholder="Search" required />
             </div>
 
             <button type="submit"
