--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -1,4 +1,3 @@
-<section>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
   function change_quantity(cart_id, product_id, user_id, count) {
@@ -27,88 +26,106 @@
       }
     });
   }
-
 </script>
-<section class="h-100 h-custom " style="background-color: white">
-        <div class="container h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-12">
-              <div class=" card-registration" style="">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-lg-8">
-                      <div class="p-5">
-                        {{#each user_cart}}
-                        <div class="row mb-4 d-flex justify-content-between align-items-center">
-                          <div class="col-md-2 col-lg-2 col-xl-2">
-                            <a href="/product_details?product_id={{this.product._id}}">
-                                   <img
-                              src="/product_images/{{this.product._id}}.jpg"
-                              class="img-fluid rounded-3" alt="No Image">
-                            </a>
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-3">
-                            <h6 class="text-muted" hidden>{{this.product.Category}}</h6>
-                            <h6 class="mb-0">{{this.product.Name}}</h6>
-                          </div>
-                          <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                            <button class="btn btn-outline-danger"
-              onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user._id}}',-1)">-</button>
-      
-                          <h5 id="{{this.product._id}}">{{this.quantity}}</h5>
 
-                            <button class="btn btn-outline-success"
-              onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user._id}}',1)">+</button>
+<section class="bg-white py-8 antialiased dark:bg-gray-900 md:py-16">
+  <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">
+        <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-center text-gray-900 dark:text-white">My Cart</h2>
+    <div class="mt-6 sm:mt-8 md:gap-6 lg:flex lg:items-start xl:gap-8">
+      <div class="mx-auto w-full flex-none lg:max-w-2xl xl:max-w-4xl">
+        <div class="space-y-6">
+          {{#each user_cart}}
+          <div class="rounded-lg border border-gray-200 bg-white p-4 shadow-sm dark:border-gray-700 dark:bg-gray-800 md:p-6">
+            <div class="space-y-4 md:flex md:items-center md:justify-between md:gap-6 md:space-y-0">
+              <a href="/product_details?product_id={{this.product._id}}" class="shrink-0 md:order-1">
+                <img class="h-20 w-20 dark:hidden" src="/product_images/{{this.product._id}}.jpg" alt="No image" />
+              </a>
 
-                          </div>
-                          <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                            <h6 class="mb-0">₹ {{#cal_price this.product.Price  this.quantity}}{{/cal_price}} 
-                            </h6>
-                          </div>
-                          <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                            <a href="/remove_product?cart_id={{this._id}}&&product_id={{this.product._id}}"  
-                            class="btn btn-danger">X</a>
-                          </div>
-                        </div>
-                        <hr class="my-4">
-                        {{/each}}
-                        <div class="pt-5">
-                          <h6 class="mb-0"><a href="/" class="text-body" style="text-decoration: none;">Back to shop</a></h6>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4" style="background-color: #F3F4F6;">
-                      <div class="p-5">
-                        <h3 class="fw-bold mb-5 mt-2 pt-1">Summary</h3>
-                        <hr class="my-4">
-      
-                        <div class="d-flex justify-content-between mb-4">
-                          <h5 class="text-uppercase">Total </h5>
-                          <h5 id="total">₹ {{total.total}} </h5>
-                        </div>
-                        <h5 class="text-uppercase mb-3">Give code</h5>
-      
-                        <div class="mb-5">
-                          <div data-mdb-input-init class="form-outline">
-                            <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
-                            <label class="form-label" for="form3Examplea2">Enter your code</label>
-                          </div>
-                        </div>
-      
-                        <hr class="my-4">
-      
-                        <div class="d-flex justify-content-between mb-5">
-                          <h5 class="text-uppercase">Total price</h5>
-                          <h5 id="total">₹ {{total.total}} </h5>
-                        </div>
-                        <a href="/place_order" class="btn text-white bg-gray-700">Place Order</a>
-                      </div>
-                    </div>
-                  </div>
+              <label for="counter-input" class="sr-only">Choose quantity:</label>
+              <div class="flex items-center justify-between md:order-3 md:justify-end">
+                <div class="flex items-center">
+                  <button onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user._id}}',-1)"
+                   type="button" id="decrement-button" data-input-counter-decrement="counter-input" class="inline-flex h-5 w-5 shrink-0 items-center justify-center rounded-md border border-gray-300 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700">
+                    <svg class="h-2.5 w-2.5 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 2">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h16" />
+                    </svg>
+                  </button>
+
+                  <p  id="{{this.product._id}}"
+                  class="w-10 shrink-0 border-0 bg-transparent text-center text-sm font-medium text-gray-900 focus:outline-none focus:ring-0 dark:text-white" placeholder="">
+                  {{this.quantity}}
+                  </p>  
+
+                  <button onclick="change_quantity('{{this._id}}','{{this.product._id}}','{{../user._id}}',1)"
+                   type="button" id="increment-button" data-input-counter-increment="counter-input" class="inline-flex h-5 w-5 shrink-0 items-center justify-center rounded-md border border-gray-300 bg-gray-100 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700">
+                    <svg class="h-2.5 w-2.5 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 18">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16" />
+                    </svg>
+                  </button>
+                </div>
+                <div class="text-end md:order-4 md:w-32">
+                  <p class="text-base font-bold text-gray-900 dark:text-white">
+                     ₹ {{#cal_price this.product.Price  this.quantity}}{{/cal_price}} 
+                  </p>
+                </div>
+              </div>
+
+              <div class="w-full min-w-0 flex-1 space-y-4 md:order-2 md:max-w-md">
+                <a href="/product_details?product_id={{this.product._id}}"  style="text-decoration: none;"
+                class="text-base font-medium text-gray-900 hover:underline dark:text-white">
+                {{this.product.Name}}</a>
+                <div class="flex items-center gap-4">
+                  <a href="/remove_product?cart_id={{this._id}}&&product_id={{this.product._id}}" style="text-decoration: none;"
+                   type="button" class="inline-flex items-center text-sm font-medium text-red-500 hover:text-red-600">
+                    <svg class="me-1.5 h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18 17.94 6M18 18 6.06 6" />
+                    </svg>
+                    Remove
+                  </a>
                 </div>
               </div>
             </div>
           </div>
+          {{/each}}
         </div>
-      </section>
+      </div>
+
+      <div class="mx-auto mt-6 max-w-4xl flex-1 space-y-6 lg:mt-0 lg:w-full">
+        <div class="space-y-4 rounded-lg border border-gray-200 bg-white p-4 shadow-sm dark:border-gray-700 dark:bg-gray-800 sm:p-6">
+          <p class="text-xl font-semibold text-gray-900 dark:text-white">Order summary</p>
+
+          <div class="space-y-4">
+            <div class="space-y-2">
+              <dl class="flex items-center justify-between gap-4">
+                <dt class="text-base font-normal text-gray-500 dark:text-gray-400">Original price</dt>
+                <dd id="total" class="text-base font-medium text-gray-900 dark:text-white">₹ {{total.total}}</dd>
+              </dl>
+
+            </div>
+
+            <dl class="flex items-center justify-between gap-4 border-t border-gray-200 pt-2 dark:border-gray-700">
+              <dt class="text-base font-bold text-gray-900 dark:text-white">Total</dt>
+              <dd id="total" class="text-base font-bold text-gray-900 dark:text-white">₹ {{total.total}}</dd>
+            </dl>
+          </div>
+
+          <a href="#" class="flex w-full items-center justify-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Proceed to Checkout</a>
+
+          <div class="flex items-center justify-center gap-2">
+            <a href="/place_order" class="btn text-white bg-gray-700">Place Order</a>
+          </div>
+        </div>
+
+        <div class="space-y-4 rounded-lg border border-gray-200 bg-white p-4 shadow-sm dark:border-gray-700 dark:bg-gray-800 sm:p-6">
+          <form class="space-y-4">
+            <div>
+              <label for="voucher" class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"> Do you have a voucher or gift card? </label>
+              <input type="text" id="voucher" class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500" placeholder="" required />
+            </div>
+            <button type="submit" class="flex w-full items-center justify-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Apply Code</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
