--- a/views/users/new_password.hbs
+++ b/views/users/new_password.hbs
@@ -7,42 +7,16 @@
     />
     <h2
       class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
-    >Sign in to your account</h2>
+    >Enter New Password</h2>
   </div>
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form class="space-y-6" action="/login" method="POST">
-      {{#if loginErr}}
-    <p class="error" style="color:red;">! {{loginErr}}</p>
-  {{/if}}
-      <div>
-        <label
-          for="Email"
-          class="block text-sm font-medium leading-6 text-gray-900"
-        >Email address</label>
-        <div class="mt-2">
-          <input
-            id="Email"
-            name="Email"
-            type="email"
-            autocomplete="email"
-            required
-            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-          />
-        </div>
-      </div>
-
+    <form class="space-y-6" action="/change_password" method="POST">
       <div>
         <div class="flex items-center justify-between">
           <label
             for="Password"
             class="block text-sm font-medium leading-6 text-gray-900"
-          >Password</label>
-          <div class="text-sm">
-            <a style="text-decoration: none;"
-              href="/forgot_password"
-              class="font-semibold text-indigo-600 hover:text-indigo-500"
-            >Forgot password?</a>
-          </div>
+          >New Password</label>
         </div>
         <div class="mt-2">
           <input
@@ -54,22 +28,31 @@
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
         </div>
+           <div class="flex items-center justify-between">
+          <label
+            for="Password"
+            class="block text-sm font-medium leading-6 text-gray-900"
+          > Confirm New Password</label>
+        </div>
+        <div class="mt-2">
+          <input
+            id="password2"
+            name="Password2"
+            type="password"
+            autocomplete="current-password"
+            required
+            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+        <input type="text"  name="Email" value="{{Email}}" hidden>
       </div>
 
       <div>
         <button
           type="submit"
           class="flex w-full justify-center rounded-md bg-gray-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-gray-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
-        >Log in</button>
+        >Submit</button>
       </div>
     </form>
-
-    <p class="mt-10 text-center text-sm text-gray-500">
-      Not a user?
-      <a style="text-decoration: none;"
-        href="/signup"
-        class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500"
-      >Sign Up</a>
-    </p>
   </div>
 </div>
