--- a/views/admin/add_product.hbs
+++ b/views/admin/add_product.hbs
@@ -4,46 +4,71 @@
         <form action="/admin/add_product" enctype="multipart/form-data" method="POST">
             <div class="grid gap-4 sm:grid-cols-2 sm:gap-6">
                 <div class="sm:col-span-2">
-                    <label for="Name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Product
+                    <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Product
                         Name</label>
-                    <input type="text" name="Name" id="Name"
+                    <input type="text" name="name" id="name"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="Type product name" required>
                 </div>
                  <div class="sm:col-span-2">
-                    <label for="Category" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                    <label for="category" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
                         Category </label>
-                    <input type="text" name="Category" id="Category"
+                    <input type="text" name="category" id="category"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="Product category" required>
                 </div>
+                <div class="sm:col-span-2">
+                    <label for="seller_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                        Seller Name</label>
+                    <input type="text" name="seller_name" id="seller_name"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                        placeholder="Seller Name" required>
+                </div>
+                <div class="sm:col-span-2">
+                    <label for="seller" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                        Seller Contact </label>
+                    <input type="tel" name="seller_phone_number" id="seller_phone_number"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                        placeholder="+91 xxxxx xxxxx" required>
+                        <br>
+                    <input type="email" name="seller_email" id=""
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                        placeholder="name@gmail.com" required>
+                </div>
+                <div class="sm:col-span-2">
+                    <label for="seller_address" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                        Seller Address </label>
+                    <input type="text" name="seller_address" id="seller_address"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+                        placeholder="Seller Address" required>
+                </div>
                 <div class="w-full">
-                    <label for="Color"
+                    <label for="color"
                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Color</label>
-                    <input type="text" name="Color" id="Color"
+                    <input type="text" name="color" id="color"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="Product color" required>
                 </div>
                 <div class="w-full">
-                    <label for="Price"
+                    <label for="price"
                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Price</label>
-                    <input type="text" name="Price" id="Price"
+                    <input type="text" name="price" id="price"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="Product price" required>
                 </div>
                 <div class="sm:col-span-2">
-                    <label for="Description"
+                    <label for="description"
                         class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
-                    <textarea id="Description" rows="8" name="Description" type="text"
+                    <textarea id="description" rows="8" name="description" type="text"
                         class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="Your description here"></textarea>
                 </div>
                 <div class="sm:col-span-2">
-                    <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="Image">
+                    <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="image">
                         Upload image </label>
                     <input
                         class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
-                        id="Image" name="Image" type="file">
+                        id="image" name="image" type="file">
                 </div>
             </div>
             <button type="submit"
