--- a/views/admin/admin_order_details.hbs
+++ b/views/admin/admin_order_details.hbs
@@ -28,7 +28,7 @@
                     <a href="/admin/admin_product_details?product_id={{this.product._id}}" class="flex items-center aspect-square w-10 h-10 shrink-0">
                       <img class="h-auto w-full max-h-full dark:hidden" src="/product_images/{{this.product._id}}.jpg" alt="imac image" />
                     </a>
-                    <a href="/admin/admin_product_details?product_id={{this.product._id}}" style="text-decoration: none;">{{this.product.Name}}</a>
+                    <a href="/admin/admin_product_details?product_id={{this.product._id}}" style="text-decoration: none;">{{this.product.name}}</a>
                   </div>
                 </td>
                 <td class="p-4 text-base font-normal text-gray-900 dark:text-white">x {{this.quantity}}</td>
