--- a/views/users/new_password.hbs
+++ b/views/users/new_password.hbs
@@ -14,37 +14,35 @@
       <div>
         <div class="flex items-center justify-between">
           <label
-            for="Password"
+            for="password"
             class="block text-sm font-medium leading-6 text-gray-900"
           >New Password</label>
         </div>
         <div class="mt-2">
           <input
             id="password"
-            name="Password"
+            name="password"
             type="password"
-            autocomplete="current-password"
             required
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
         </div>
            <div class="flex items-center justify-between">
           <label
-            for="Password"
+            for="password"
             class="block text-sm font-medium leading-6 text-gray-900"
           > Confirm New Password</label>
         </div>
         <div class="mt-2">
           <input
             id="password2"
-            name="Password2"
+            name="password2"
             type="password"
-            autocomplete="current-password"
             required
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
         </div>
-        <input type="text"  name="Email" value="{{Email}}" hidden>
+        <input type="text"  name="email" value="{{email}}" hidden>
       </div>
 
       <div>
