--- a/views/users/order_details.hbs
+++ b/views/users/order_details.hbs
@@ -7,12 +7,12 @@
         <h4 class="text-lg font-semibold text-gray-900 dark:text-white">Billing & Delivery information</h4>
 
         <dl>
-          <dt class="text-base font-medium text-gray-900 dark:text-white">{{user.Name}}</dt>
+          <dt class="text-base font-medium text-gray-900 dark:text-white">{{user.name}}</dt>
           <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">
             {{order_details.delivery_details.address}},{{order_details.delivery_details.pin_code}}</dd>
           <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">
             {{order_details.delivery_details.mobile_number}}</dd>
-          <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">{{user.Email}}</dd>
+          <dd class="mt-1 text-base font-normal text-gray-500 dark:text-gray-400">{{user.email}}</dd>
 
         </dl>
       </div>
@@ -32,12 +32,12 @@
                         alt="imac image" />
                     </a>
                     <a href="/product_details?product_id={{this._id}}"
-                      style="text-decoration: none;">{{this.product.Name}}</a>
+                      style="text-decoration: none;">{{this.product.name}}</a>
                   </div>
                 </td>
                 <td class="p-4 text-base font-normal text-gray-900 dark:text-white">x {{this.quantity}}</td>
                 <td class="p-4 text-right text-base font-bold text-gray-900 dark:text-white">
-                  <span style="font-weight: bold;"> ₹ {{#cal_price this.product.Price
+                  <span style="font-weight: bold;"> ₹ {{#cal_price this.product.price
                     this.quantity}}{{/cal_price}}</span>
                 </td>
               </tr>
