--- a/views/admin/admin_product_details.hbs
+++ b/views/admin/admin_product_details.hbs
@@ -132,6 +132,8 @@
             <h2  class="font-bold">Seller Details</h2>
             <p>{{product.seller_name}}</p>
             <p>{{product.seller_phone_number}}</p>
+            <p>{{product.seller_email}}</p>
+            <p>{{product.seller_address}}</p>
                      
         </div>
       </div>
