--- a/views/partials/user_header.hbs
+++ b/views/partials/user_header.hbs
@@ -94,7 +94,7 @@
               <path stroke="currentColor" stroke-width="2"
                 d="M7 17v1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3Zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
             </svg>
-            <p style="color: green;">{{user.Name}}</p>
+            <p style="color: green;">{{user.name}}</p>
             {{else}}
             <a href="/login" id="userDropdownButton1" data-dropdown-toggle="userDropdown1" type="button"
               style="text-decoration: none;" class="inline-flex items-center rounded-lg justify-center p-2 hover:bg-gray-100 
