--- a/views/users/home.hbs
+++ b/views/users/home.hbs
@@ -59,7 +59,7 @@
           <div class="mb-4 flex items-center justify-between gap-4">
             <span
               class="me-2 rounded bg-primary-100 px-2.5 py-0.5 text-xs font-medium text-primary-800 dark:bg-primary-900 dark:text-primary-300">
-              {{this.Category}}</span>
+              {{this.category}}</span>
 
             <div class="flex items-center justify-end gap-1">
               <button type="button" data-tooltip-target="tooltip-quick-look"
@@ -76,7 +76,7 @@
           </div>
 
           <a href="/product_details?product_id={{this._id}}"  style="text-decoration: none;"
-            class="text-lg font-semibold leading-tight text-gray-900 hover:underline dark:text-white">{{this.Name}}</a>
+            class="text-lg font-semibold leading-tight text-gray-900 hover:underline dark:text-white">{{this.name}}</a>
 
           <div class="mt-2 flex items-center gap-2">
             <div class="flex items-center">
@@ -136,7 +136,7 @@
           </ul>
 
           <div class="mt-4 flex items-center justify-between gap-4">
-            <p class="text-2xl font-extrabold leading-tight text-gray-900 dark:text-white">₹{{this.Price}}</p>
+            <p class="text-2xl font-extrabold leading-tight text-gray-900 dark:text-white">₹{{this.price}}</p>
 
             <a href="/place_order?is_single_product=true&&product_id={{this._id}}" type="button"
               style="text-decoration: none;"
