--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -11,18 +11,18 @@
   </div>
   <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
     <form class="space-y-6" action="/login" method="POST">
-      {{#if loginErr}}
-    <p class="error" style="color:red;">! {{loginErr}}</p>
+      {{#if login_err}}
+    <p class="error" style="color:red;">! {{login_err}}</p>
   {{/if}}
       <div>
         <label
-          for="Email"
+          for="email"
           class="block text-sm font-medium leading-6 text-gray-900"
         >Email address</label>
         <div class="mt-2">
           <input
-            id="Email"
-            name="Email"
+            id="email"
+            name="email"
             type="email"
             autocomplete="email"
             required
@@ -34,7 +34,7 @@
       <div>
         <div class="flex items-center justify-between">
           <label
-            for="Password"
+            for="password"
             class="block text-sm font-medium leading-6 text-gray-900"
           >Password</label>
           <div class="text-sm">
@@ -47,9 +47,8 @@
         <div class="mt-2">
           <input
             id="password"
-            name="Password"
+            name="password"
             type="password"
-            autocomplete="current-password"
             required
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
