--- a/views/users/place_order.hbs
+++ b/views/users/place_order.hbs
@@ -3,12 +3,12 @@
         <div class="mb-4">
           <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" >Address</label>
           <input type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-          id="address" name="address" />
+          id="address" name="address" required />
         </div>
         <div class="mb-4">
           <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" >Pincode</label>
           <input type="text" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" 
-          id="pincode" name="pincode" />
+          id="pincode" name="pincode" required />
         </div>
         <div class="form-group">
           <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" >Mobile Number</label>
@@ -16,7 +16,7 @@
             type="text"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
             id="mobilenumber"
-            name="mobilenumber"
+            name="mobilenumber" required
           />
         </div>
         <div class="form-group">
