--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -13,13 +13,13 @@
     <form class="space-y-6" action="/signup" method="POST">
       <div>
         <label
-          for="Name"
+          for="name"
           class="block text-sm font-medium leading-6 text-gray-900"
         >Name</label>
         <div class="mt-2">
           <input
-            id="Name"
-            name="Name"
+            id="name"
+            name="name"
             type="text"
             required
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
@@ -31,13 +31,13 @@
 
       <div>
         <label
-          for="Email"
+          for="email"
           class="block text-sm font-medium leading-6 text-gray-900"
         >Email address</label>
         <div class="mt-2">
           <input
             id="email"
-            name="Email"
+            name="email"
             type="email"
             autocomplete="email"
             required
@@ -49,15 +49,15 @@
       <div>
         <div class="flex items-center justify-between">
           <label
-            for="Gender"
+            for="gender"
             class="block text-sm font-medium leading-6 text-gray-900"
           >Gender</label>
         </div>
         <div class="mt-2">
           <select
             style="height: 32px;"
-            id="Gender"
-            name="Gender"
+            id="gender"
+            name="gender"
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           >
             <option selected>Select</option>
@@ -70,16 +70,15 @@
       <div>
         <div class="flex items-center justify-between">
           <label
-            for="Password"
+            for="password"
             class="block text-sm font-medium leading-6 text-gray-900"
           >Password</label>
         </div>
         <div class="mt-2">
           <input
             id="password"
-            name="Password"
+            name="password"
             type="password"
-            autocomplete="current-password"
             required
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
