--- a/views/users/verify_email.hbs
+++ b/views/users/verify_email.hbs
@@ -17,13 +17,13 @@
       ! Invalid Email</p>
     {{/if}}
         <label
-          for="Email"
+          for="email"
           class="block text-sm font-medium leading-6 text-gray-900"
         >Email address</label>
         <div class="mt-2">
           <input
-            id="Email"
-            name="Email"
+            id="email"
+            name="email"
             type="email"
             autocomplete="email"
             required
