--- a/views/users/verify_otp.hbs
+++ b/views/users/verify_otp.hbs
@@ -29,7 +29,7 @@
             class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
           <input type="text" name="secret_otp" id="secret_otp" value="{{otp}}" hidden>
-          <input type="text" name="Email" id="Email" value="{{Email}}" hidden>
+          <input type="text" name="email" id="email" value="{{email}}" hidden>
 
         </div>
       </div>
