--- a/views/admin/edit_product.hbs
+++ b/views/admin/edit_product.hbs
@@ -10,7 +10,8 @@
                 <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Color</label>
                 <input type="text" name="color" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.color}}">
                 <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Description</label>
-                <input type="text" name="description" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.description}}">
+                <textarea type="text" rows="4" name="description" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" >
+                 {{product.description}} </textarea>
                 <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Price(₹)</label>
                 <input type="number" name="price" class="form-control bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5" value="{{product.price}}">
                 <img src="/product_images/{{product._id}}.jpg" alt="" style="width: 100px; heigh:50px;" id="Img"> 
