implemented_feature_to_add_multiple_images_for_product

--- a/views/users/order_details.hbs
+++ b/views/users/order_details.hbs
@@ -28,8 +28,8 @@
                   <div class="flex items-center gap-4">
                     <a href="/product_details?product_id={{this.product._id}}"
                       class="flex items-center aspect-square w-10 h-10 shrink-0">
-                      <img class="h-auto w-full max-h-full dark:hidden" src="product_images/{{this.product._id}}.jpg"
-                        alt="imac image" />
+                      <img class="h-auto w-full max-h-full rounded" src="product_images/{{this.product._id}}1.jpg"
+                        alt="404" />
                     </a>
                     <a href="/product_details?product_id={{this._id}}"
                       style="text-decoration: none;">{{this.product.name}}</a>
