--- a/views/users/place_order.hbs
+++ b/views/users/place_order.hbs
@@ -37,7 +37,7 @@
         <input type="text" name="condition" id="condition" value="{{condition}}" hidden >
         <input type="text" name="product_id" id="product_id" value="{{product_id}}" hidden >
         {{/if}}
-        <label for="" class="float-start block  text-sm font-medium text-gray-900 dark:text-white">
+        <label for="" class="block mb-2 text-sm font-medium text-gray-900">
           Payment Method:</label>
         <div class="form-check">
           <input
@@ -47,7 +47,7 @@
             value="COD"
             id="COD"
           />
-          <label class="form-check-label block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+          <label class=" text-sm font-medium text-gray-900">
             COD
           </label>
         </div>
@@ -59,10 +59,11 @@
             value="ONLINE"
             id="ONLINE"
           />
-          <label class="form-check-label block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+          <label class=" text-sm font-medium text-gray-900">
             Online Payment
           </label>
         </div>
+        <br>
         <button
           type="submit"
           class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 "
