--- a/views/users/view_products.hbs
+++ b/views/users/view_products.hbs
@@ -39,7 +39,7 @@
       <div class="rounded-lg  bg-white p-6 shadow-sm dark:border-gray-700 dark:bg-gray-800">
         <div class="h-56 w-full">
           <a href="/product_details?product_id={{this._id}}">
-            <img class="mx-auto h-full dark:hidden" src="product_images/{{this._id}}.jpg" alt="404" />
+            <img class="mx-auto h-full rounded" src="product_images/{{this._id}}1.jpg" alt="404" />
           </a>
         </div>
         <div class="pt-6">
