--- a/views/admin/add_product.hbs
+++ b/views/admin/add_product.hbs
@@ -10,7 +10,7 @@
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="Type product name" required>
                 </div>
-                 <div class="sm:col-span-2">
+                <div class="sm:col-span-2">
                     <label for="category" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
                         Category </label>
                     <input type="text" name="category" id="category"
@@ -39,11 +39,17 @@
                         placeholder="Your description here"></textarea>
                 </div>
                 <div class="sm:col-span-2">
-                    <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="image">
+                    <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="image1">
                         Upload image </label>
                     <input
                         class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
-                        id="image" name="image" type="file">
+                        id="image1" name="image1" type="file">
+                    <input
+                        class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+                        id="image2" name="image2" type="file">
+                    <input
+                        class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+                        id="image3" name="image3" type="file">
                 </div>
                 <div class="sm:col-span-2">
                     <label for="seller_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
@@ -58,7 +64,7 @@
                     <input type="tel" name="seller_phone_number" id="seller_phone_number"
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="+91 xxxxx xxxxx" required>
-                        <br>
+                    <br>
                     <input type="email" name="seller_email" id=""
                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
                         placeholder="name@gmail.com" required>
