--- a/views/admin/admin_customers.hbs
+++ b/views/admin/admin_customers.hbs
@@ -1,8 +1,8 @@
-<div class="relative overflow-x-auto">
-<h4 class="text-2xl font-bold dark:text-white mx-10">All customers</h4>
+<div class="relative overflow-x-auto mx-3">
+<h4 class="text-2xl font-bold dark:text-white ">All customers</h4>
 <br>
-    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500 border ">
+        <thead class="text-xs text-white uppercase bg-gray-600 dark:bg-gray-700 dark:text-gray-400">
             <tr>
                 <th scope="col" class="px-6 py-3">
                     Customer name
