--- a/views/admin/admin_home.hbs
+++ b/views/admin/admin_home.hbs
@@ -1,6 +1,8 @@
-<div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+<div class="relative overflow-x-auto  mx-3 ">
+    <h4 class="text-2xl font-bold ">All products</h4>
+    <br>
+    <table class="w-full text-sm text-left rtl:text-right text-gray-500  rounded-lg border shadow">
+        <thead class="text-xs text-white uppercase bg-gray-600 dark:bg-gray-700 dark:text-gray-400">
             <tr>
                 <th scope="col" class="px-6 py-3">
                     Product name
@@ -39,19 +41,19 @@
                    ₹ {{this.price}}
                 </td>
                 <td class="px-6 py-4">
-                    <img src="/product_images/{{this._id}}.jpg" style="width: 50px; height:50px;" alt="">
+                    <img src="/product_images/{{this._id}}1.jpg" class="rounded" style="width: 50px; height:50px;" alt="">
                 </td>
                 <td class="px-6 py-4">
                     <a href="/admin/admin_product_details?product_id={{this._id}}"
-                    class="font-medium text-blue-600 hover:text-blue-500" style="text-decoration: none;">
+                    class="font-medium text-gray-600 hover:text-gray-500" style="text-decoration: none;">
                     View
                     </a>
                     <br>
-                    <a href="/admin/edit_product?id={{this._id}}" class="font-medium text-indigo-600 hover:text-indigo-500" style="text-decoration: none;">
-                        Edit</a>
+                    <a href="/admin/edit_product?id={{this._id}}" class="font-medium text-blue-600 hover:text-blue-500" style="text-decoration: none;">
+                        Edit</a>               
                         <br>
-                    <a href="/admin/delete_product?id={{product._id}}" class="font-medium text-red-600 hover:text-red-500" style="text-decoration:none;"
-                    onclick="return confirm('Do you want to delete {{product.name}}')">
+                    <a href="/admin/delete_product?id={{this._id}}" class="font-medium text-red-600 hover:text-red-500" style="text-decoration:none;"
+                    onclick="return confirm('Do you want to delete {{this.name}}')">
                         Delete</a>
 
                 </td>
