--- a/views/admin/admin_order_details.hbs
+++ b/views/admin/admin_order_details.hbs
@@ -26,7 +26,7 @@
                 <td class="whitespace-nowrap py-4 md:w-[384px]">
                   <div class="flex items-center gap-4">
                     <a href="/admin/admin_product_details?product_id={{this.product._id}}" class="flex items-center aspect-square w-10 h-10 shrink-0">
-                      <img class="h-auto w-full max-h-full dark:hidden" src="/product_images/{{this.product._id}}.jpg" alt="imac image" />
+                      <img class="h-auto w-full max-h-full rounded" src="/product_images/{{this.product._id}}1.jpg" alt="imac image" />
                     </a>
                     <a href="/admin/admin_product_details?product_id={{this.product._id}}" style="text-decoration: none;">{{this.product.name}}</a>
                   </div>
