--- a/views/partials/user_header.hbs
+++ b/views/partials/user_header.hbs
@@ -29,14 +29,14 @@
                 Orders
               </a>
             </li>
-            <li class="shrink-0">
+            <li class="shrink-0 ">
               <button data-modal-target="authentication-modal" data-modal-toggle="authentication-modal"
                 id="ai_button"
-                class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500
-             text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium text-xs rounded-lg text-center pl-1 pr-1"
+                class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm me-2 mb-2 px-1 py-0 text-center "
                 type="button">
                 Ask Ai
               </button>
+
             </li>
             <li class="shrink-0">
               <a href="/contact_us" title="" style="text-decoration: none;"
@@ -151,7 +151,7 @@
           <input type="text" id="prompt" name="prompt" placeholder="Enter your prompt here!"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white">
           <br>
-          <button type="button" onclick="ask_ai({{user}})"
+          <button type="button" onclick="ask_ai()"
             class="w-full text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-gray-600 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
             <span class="loader" id="spinner" style="display:none;"></span> Ask
           </button>
@@ -169,7 +169,6 @@
 
 <script>
   function ask_ai(user) {
-    if(user!=null){
     document.getElementById('result').innerHTML = "";
     let spinner = document.getElementById("spinner");
     spinner.style.display = 'inline-block';
@@ -184,12 +183,6 @@
         document.getElementById("result").innerHTML = response.resp
       }
     })
-
-    }
-    else{
-      location.href='/login'
-    }
-  
   }
 
   function clear_area() {
