--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -38,7 +38,7 @@
           <div class="rounded-lg border border-gray-200 bg-white p-4 shadow-sm dark:border-gray-700 dark:bg-gray-800 md:p-6">
             <div class="space-y-4 md:flex md:items-center md:justify-between md:gap-6 md:space-y-0">
               <a href="/product_details?product_id={{this.product._id}}" class="shrink-0 md:order-1">
-                <img class="h-20 w-20 dark:hidden" src="/product_images/{{this.product._id}}.jpg" alt="No image" />
+                <img class="h-20 w-20 rounded" src="/product_images/{{this.product._id}}1.jpg" alt="No image" />
               </a>
 
               <label for="counter-input" class="sr-only">Choose quantity:</label>
@@ -108,11 +108,9 @@
               <dd id="total" class="text-base font-bold text-gray-900 dark:text-white">₹ {{total.total}}</dd>
             </dl>
           </div>
-
-          <a href="#" class="flex w-full items-center justify-center rounded-lg bg-primary-700 px-5 py-2.5 text-sm font-medium text-white hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Proceed to Checkout</a>
-
           <div class="flex items-center justify-center gap-2">
-            <a href="/place_order" class="btn text-white bg-gray-700">Place Order</a>
+            <a href="/place_order" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">
+            Place Order</a>
           </div>
         </div>
 
