--- a/views/users/home.hbs
+++ b/views/users/home.hbs
@@ -49,10 +49,10 @@
   <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">
     <div class="mb-4 grid gap-4 sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4">
       {{#each products}}
-      <div class="rounded-lg  bg-white p-6 shadow-sm dark:border-gray-700 dark:bg-gray-800">
+      <div class="rounded-lg  bg-white p-6 shadow-sm border-gray-500 ">
         <div class="h-56 w-full">
           <a href="/product_details?product_id={{this._id}}">
-            <img class="mx-auto h-full dark:hidden" src="product_images/{{this._id}}.jpg" alt="" />
+            <img class="mx-auto h-full rounded" src="product_images/{{this._id}}1.jpg" alt="" />
           </a>
         </div>
         <div class="pt-6">
