--- a/views/users/new_password.hbs
+++ b/views/users/new_password.hbs
@@ -1,7 +1,7 @@
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <img
-      class="mx-auto h-10 w-auto"
+      class="mx-auto h-10 w-auto rounded"
       src="images/website_icon.jpeg"
       alt="Your Company"
     />
